<resources>
    <string name="app_name">Zood Location</string>
    <string name="init">Init</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_an_account">Create an account</string>
    <string name="log_in">Log in</string>
    <string name="password_mismatch_msg">The passwords don\'t match. Please check and try again.</string>
    <string name="ok">OK</string>
    <string name="password_too_short_msg">That password is too short. Create a password that is at least 6 characters long. At least 12 character is even better.</string>
    <string name="keypair_generation_error">Error generating key pair.</string>
    <string name="username_too_short_msg">The username you entered is too short. Make sure it\'s at least 5 characters long.</string>
    <string name="unknown_user_generation_error_msg">An unknown error occurred while trying to generate your user settings. Try again, and if it persists, please contact support.</string>
    <string name="add_friend">Add friend</string>
    <string name="cancel">Cancel</string>
    <string name="check_messages">Check messages</string>
    <string name="friend_requests">Friend requests</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="show">Show</string>
    <string name="email_optional_lowercase">email (optional)</string>
    <string name="lets_go_exclamation">Let\'s go!</string>
    <string name="need_username_msg">You need to pick a username.</string>
    <string name="enter_username_msg">You forgot to enter your username.</string>
    <string name="your_friends">Your friends</string>
    <string name="friend_request">Friend request</string>
    <string name="share_my_location">Share my location</string>
    <string name="note_message_optional">Note/Message (optional)</string>
    <string name="send">Send</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="log_out">Log out</string>
    <string name="confirm_log_out_msg">Are you sure you want to log out?</string>
    <string name="no">No</string>
    <string name="username_not_available_msg">That username has already been taken.</string>
    <string name="share_your_location_with_msg">Share your location with %s?</string>
    <string name="ellipsis">…</string>
    <string name="now">Now</string>
    <string name="view_logs">View logs</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="email_hint_msg">Email (optional)</string>
    <string name="username_missing">Username missing</string>
    <string name="too_short">Too short</string>
    <string name="invalid_characters_msg">Invalid characters. Use a–z and 0–9</string>
    <string name="invalid_address">Invalid address</string>
    <string name="username_please_msg">Username, please</string>
    <string name="password_missing_msg">And your password?</string>
    <string name="unknown_username">Unknown username</string>
    <string name="unexpected_error">Unexpected error</string>
    <string name="null_password_hash_msg">We don\'t know why the login failed, but the bug has been reported. It may work if you just try again.</string>
    <string name="server_key_retrieval_network_error_msg">There was a network problem. Make sure your internet connection works then try again.</string>
    <string name="server_key_retrieval_unknown_error_msg">There was an unknown error retrieving the server\'s public key.</string>
    <string name="network_error">Network error</string>
    <string name="login_failure_network_msg">Check your connection then try again.</string>
    <string name="login_failed">Login failed</string>
    <string name="symmetric_key_unwrap_failure_msg">We couldn\'t log you in (unable to unwrap symmetric key).</string>
    <string name="network_failure_profile_restore_msg">Network error while trying to restore your profile. Check your connection then try again.</string>
    <string name="unknown_failure_profile_restore_msg">An unknown error occurred while attempting to restore your profile.</string>
    <string name="unknown_error_completing_challenge_response_msg">There was an unexpected error while trying to complete the login.</string>
    <string name="not_sharing">Not sharing</string>
    <string name="sharing">Sharing</string>
    <string name="unknown">Unknown</string>
    <string name="loading_ellipsis">Loading…</string>
    <string name="select_avatar_msg">Select an avatar or pick your own picture.</string>
    <string name="select">Select</string>
    <string name="avatar_preview">Avatar preview</string>
    <string name="friends">Friends</string>
    <string name="server_key_retrieval_bad_response_msg">The server sent us a malformed response while trying to retrieve its public key. Try again later, and if the problem persists, please contact support.</string>
    <string name="remove_friend">Remove friend</string>
    <string name="remove_friend_prompt_msg">You will not be able to see their location, and they won\'t be able to see yours. If you want to temporarily prevent them from seeing your location, simply toggle the sharing switch instead.</string>
    <string name="never_mind">Never mind</string>
    <string name="toast_disable_sharing_error_msg">Error disabling sharing. Try again.</string>
    <string name="toast_enable_sharing_error_msg">Error enabling sharing. Try again.</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="change">Change</string>
    <string name="public_key_colon">Public key: </string>
    <string name="camera">Camera</string>
    <string name="photos">Photos</string>
    <string name="images">Images</string>
    <string name="crop_instructions_msg">Move and resize the square to crop your avatar.</string>
    <string name="done">Done</string>
    <string name="timed_share">Timed share</string>
    <string name="error_loading_key">Error loading key</string>
    <string name="close_drawer">Close drawer</string>
    <string name="dismiss">Dismiss</string>
    <string name="finding_location">Finding location</string>
    <string name="finding_your_location">Finding your location</string>
    <string name="biking">Biking</string>
    <string name="on_foot">On foot</string>
    <string name="running">Running</string>
    <string name="in_the_car">In the car</string>
    <string name="walking">Walking</string>
    <string name="unknown_password_hash_algorithm_msg">The password hash algorithm on your account isn\'t one this version of Zood\u00A0Location knows about. Make sure you have the latest version, then try again.</string>
    <string name="show_public_key">Show public key</string>
    <string name="your_public_key">Your public key</string>
    <string name="the_privacy_company">The privacy company</string>
    <string name="not_sharing_with_you">Not sharing with you</string>
    <string name="refresh">Refresh</string>
    <string name="battery_percent_msg">%d%%</string>
    <string name="waiting_for_location_ellipsis">Waiting for location…</string>
    <string name="remove_friend_interrogative">Remove friend?</string>
    <string name="remove">Remove</string>
    <string name="remove_friend_error_msg">There was an unexpected error while trying to removing the friend.</string>
    <string name="add">Add</string>
    <string name="add_friend_dialog_msg">Enter your friend\'s username to start sharing your location with them. They\'ll be asked to start sharing with you.</string>
    <string name="invalid_username">Invalid username</string>
    <string name="not_a_user">Not a user</string>
    <string name="database_error_msg" translatable="false">Database error: %s</string>
    <string name="sharing_grant_failed_msg" translatable="false">Sharing grant failed: %s</string>
    <string name="not_logged_in_access_token_msg" translatable="false">You\'re not logged in (access token)</string>
    <string name="not_logged_in_key_pair_msg" translatable="false">You\'re not logged in (key pair)</string>
    <string name="unknown_error_getting_user_info">Unknown error getting user info</string>
    <string name="permission_request">Permission request</string>
    <string name="location_permission_reason_msg">Zood uses your location to show your position on the map, and to securely share it with friends that you\'ve authorized. It\'s never used for any other purpose.</string>
    <string name="foreground_location_permission_reason_msg">Zood uses your location while it\'s running to display your position on the map.</string>
    <string name="background_data_is_restricted">Background data is restricted</string>
    <string name="fix">Fix</string>
    <string name="background_data_restricted_msg">Background data for Zood\u00A0Location was disabled, so it can\'t share your location while in the background. To fix this, go to \'Data usage\' then enable \'Background data\' in the app\'s settings.</string>
    <string name="ignore">Ignore</string>
    <string name="data_restricted">Data restricted</string>
    <string name="system_settings">System settings</string>
    <string name="unable_to_connect_to_zood_servers">Unable to connect to Zood servers</string>
    <string name="info">Info</string>
    <string name="unable_to_connect_msg">Zood\u00A0Location is unable to connect to the Zood servers. Make sure your phone\'s internet connection is working then come back to the app. Zood will automatically try to reconnect.</string>
    <string name="screamer_channel_description_msg">Used to play a sound when you\'re looking for your phone.</string>
    <string name="find_my_phone">Find my phone</string>
    <string name="screamer_notification_msg">Of course! This is where you left your phone. ;-)</string>
    <string name="save_error">Save error</string>
    <string name="unknown_avatar_save_error_msg">There was a problem saving your profile avatar. Try again, and if the problem persists, contact support.</string>
    <string name="avatar_save_io_error_msg">Unable to save your profile avatar. Make sure you have enough free space on your device, then try again.</string>
    <string name="background_location_permission_needed">Background location permission needed</string>
    <string name="grant_background_location_permission_via_settings_msg">Zood needs permission to access your location while in the background in order to share it with your friends (only). Go to Permissions in the app settings screen to grant it.</string>
    <string name="grant_location_permission">Grant location permission</string>
    <string name="reticulating_primes_ellipsis">Reticulating primes…</string>
    <string name="view_safety_number">View safety number</string>
    <string name="zood">Zood</string>
    <string name="safety_number_instructions_msg">If you wish to verify the security of your encryption with %s, compare the number below with the number on their device.</string>
    <string name="verify_safety_number">Verify safety number</string>
    <string name="share_safety_number_msg">Our Zood\u00A0Location safety number:\n%s</string>
    <string name="share_safety_number_via_ellipsis">Share safety number via…</string>
    <string name="back">Back</string>
    <string name="app_version_msg">Version %s (build %d)</string>
    <string name="tap_to_change_avatar">Tap to change avatar</string>
    <string name="timed_sharing">Timed sharing</string>
    <string name="timed_share_subtitle_msg">Temporarily share your location with someone that doesn\'t have Zood\u00A0Location by sending them a link.</string>
    <string name="share_your_location_with_a_new_friend">Share your location with a new friend</string>
    <string name="invite_a_friend">Invite a friend</string>
</resources>