<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_in_container"
    android:paddingStart="32dp"
    android:paddingEnd="32dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/username_field"
        android:privateImeOptions="nm"
        android:imeOptions="actionNext"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:inputType="text|textNoSuggestions"
        android:hint="@string/username"
        android:maxLines="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:imeOptions="actionNext"
        android:ems="10"
        android:id="@+id/password_field"
        app:layout_constraintRight_toLeftOf="@+id/password_reveal"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/password"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/username_field" />

    <Button
        android:text="@string/show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/password_reveal"
        android:onClick="onTogglePasswordVisibility"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/password_field"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/password_field"
        app:layout_constraintTop_toTopOf="@+id/password_field" />

    <Button
        android:text="@string/log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/password_field"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="onLoginAction" />

</android.support.constraint.ConstraintLayout>