<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="4dp"
    android:layout_width="280dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:gravity="bottom"
        android:text="@string/add_friend"
        android:textColor="@android:color/black"
        android:textSize="@dimen/dialog_title_text"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="17dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/message"
        android:text="@string/add_friend_dialog_msg"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:fontFamily="@font/poppins"
        android:textSize="@dimen/dialog_message_text"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        app:helperText=" "
        app:helperTextEnabled="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
            android:textSize="@dimen/dialog_message_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:inputType="text|textNoSuggestions"
            android:maxLines="1"
            android:privateImeOptions="nm"
            tools:text="arash"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@+id/add"
        app:layout_constraintBottom_toBottomOf="@+id/add"
        app:layout_constraintStart_toStartOf="@+id/add"
        app:layout_constraintEnd_toEndOf="@+id/add"
        android:layout_width="32dp"
        android:layout_height="32dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:fontFamily="@font/poppins_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textAllCaps="false"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>
