<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<ScrollView
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.pijun.george.MapActivity">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/root"
    android:background="@android:color/white"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:icon="@drawable/ic_chevron_left_24dp"
        app:iconGravity="textStart"
        app:iconTint="@color/black_80"
        android:onClick="onBackClicked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_width="24dp"
        android:layout_height="24dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/screen_title"
        android:text="@string/friends"
        style="@style/Zood.Headline6"
        app:layout_constraintStart_toEndOf="@id/back"
        app:layout_constraintTop_toTopOf="@id/back"
        android:layout_marginStart="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/banner"
        android:src="@drawable/george_clooney"
        android:scaleType="fitXY"
        android:contentDescription="@null"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@id/screen_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constrainedHeight="true"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/screen_purpose"
        android:text="@string/share_your_location_with_a_new_friend"
        style="@style/Zood.Headline6"
        android:textAlignment="center"
        android:layout_marginTop="24dp"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintTop_toBottomOf="@id/banner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_container"
        app:hintEnabled="true"
        android:hint="@string/username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:textColorHint="@color/zood_grey_50"
        app:layout_constraintTop_toBottomOf="@id/screen_purpose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:privateImeOptions="nm" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_friend"
        android:text="@string/add_friend"
        android:enabled="false"
        android:onClick="onAddFriendAction"
        app:layout_constraintTop_toBottomOf="@id/username_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintBottom_toTopOf="@id/invite_friend"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/friends_list"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/add_friend"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/invite_friend"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/invite_a_friend"
        android:onClick="onInviteAction"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_friend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>